--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ core.dir = ../portapps
 app = teamspeak-client
 app.name = TeamSpeak Client
 app.type = archive
+app.version = 3.1.8
 
 # Portable app
 papp.id = ${app}-portable
@@ -13,18 +14,15 @@ papp.guid = {65D1C710-B69D-4AC9-A62A-B2ECF438DB97}
 papp.name = ${app.name} Portable
 papp.desc = ${app.name} portable on Windows by Portapps
 papp.url = https://github.com/portapps/${papp.id}
-papp.path = app
-
-# Archive
-archive.version = 3.1.8
+papp.folder = app
 
 # Official artifacts
 atf.id = TeamSpeak-Client
-atf.ia32.filename = ${atf.id}-win32-${archive.version}-setup
-atf.ia32.ext = .exe
-atf.ia32.url = http://dl.4players.de/ts/releases/${archive.version}/TeamSpeak3-Client-win32-${archive.version}.exe
-atf.ia32.assertextract = ts3client_win32.exe
-atf.x64.filename = ${atf.id}-win64-${archive.version}-setup
-atf.x64.ext = .exe
-atf.x64.url = http://dl.4players.de/ts/releases/${archive.version}/TeamSpeak3-Client-win64-${archive.version}.exe
-atf.x64.assertextract = ts3client_win64.exe
+atf.win32.filename = ${atf.id}-win32-${app.version}-setup
+atf.win32.ext = .exe
+atf.win32.url = http://dl.4players.de/ts/releases/${app.version}/TeamSpeak3-Client-win32-${app.version}.exe
+atf.win32.assertextract = ts3client_win32.exe
+atf.win64.filename = ${atf.id}-win64-${app.version}-setup
+atf.win64.ext = .exe
+atf.win64.url = http://dl.4players.de/ts/releases/${app.version}/TeamSpeak3-Client-win64-${app.version}.exe
+atf.win64.assertextract = ts3client_win64.exe
