--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,12 @@
 # Portapps
-#core.dir = vendor/github.com/portapps/portapps
 core.dir = ../portapps
 
 # App
 app = teamspeak-client
 app.name = TeamSpeak Client
 app.type = archive
-app.version = 3.2.5
+app.version = 3.3.0
+app.homepage = https://www.teamspeak.com
 
 # Portable app
 papp.id = ${app}-portable
