--- a/build.properties
+++ b/build.properties
@@ -20,9 +20,9 @@ papp.folder = app
 atf.id = TeamSpeak-Client
 atf.win32.filename = ${atf.id}-win32-${app.version}-setup
 atf.win32.ext = .exe
-atf.win32.url = http://dl.4players.de/ts/releases/${app.version}/TeamSpeak3-Client-win32-${app.version}.exe
+atf.win32.url = https://files.teamspeak-services.com/releases/client/${app.version}/TeamSpeak3-Client-win32-${app.version}.exe
 atf.win32.assertextract = ts3client_win32.exe
 atf.win64.filename = ${atf.id}-win64-${app.version}-setup
 atf.win64.ext = .exe
-atf.win64.url = http://dl.4players.de/ts/releases/${app.version}/TeamSpeak3-Client-win64-${app.version}.exe
+atf.win64.url = https://files.teamspeak-services.com/releases/client/${app.version}/TeamSpeak3-Client-win64-${app.version}.exe
 atf.win64.assertextract = ts3client_win64.exe
