Set app.release

--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,7 @@ app = teamspeak-client
 app.name = TeamSpeak Client
 app.type = archive
 app.version = 3.3.2
+app.release = 14
 app.homepage = https://www.teamspeak.com
 
 # Portable app
